force-app/main/default/staticresources/python/Disappear/src/objects/PubReviewTeam__c.object
<CustomObject>
    <fields>
        <fullName>Appear_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Will not be used for implementation 1.0

In future - we may use this to display different Appear Roles for this Member - such as Legal, GPPL etc.</description>
        <label>Appear Role</label>
        <referenceTo>Appear_Role__c</referenceTo>
        <relationshipLabel>Publication Review Team Members</relationshipLabel>
        <relationshipName>PubReviewTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssignedFPRCEmail__c</fullName>
        <formula>Publication__r.Assigned_FPRC__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedFPRCEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignedFPRCFF__c</fullName>
        <formula>Publication__r.Assigned_FPRC__r.FirstName &amp; &quot; &quot; &amp; Publication__r.Assigned_FPRC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AssignedFPRCFF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment_Detail__c</fullName>
        <description>To be replaced with a Cross Reference formula field to list name of all attachments</description>
        <label>Attachment Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Vote Comments</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DelegatedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Publication Review Team Member this pub was delegated to</description>
        <label>Delegated To</label>
        <referenceTo>PubReviewTeam__c</referenceTo>
        <relationshipLabel>Publication Review Team Members (Delegated To)</relationshipLabel>
        <relationshipName>Publication_Review_Team_Members1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delegation_Justification__c</fullName>
        <label>Delegation Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewer on travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer on vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer on medical leave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewer in office but not available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisplayName__c</fullName>
        <description>Display name for the team member - Currently the contact&apos;s name or the contact being proxied. If this is not displayed, The associated contact&apos;s name will be used in the view</description>
        <label>DisplayName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailCcList__c</fullName>
        <description>This field will be used to store a list of names on the CC field of a Group Email.
This should only be used in the Email templates.
It will be refreshed before each group email is sent</description>
        <label>EmailCcList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailToList__c</fullName>
        <description>This field will be used to store a list of names on the To field of a Group Email.
This should only be used in the Email templates.
It will be refreshed before each group email is sent</description>
        <label>EmailToList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FPRDueDateFF__c</fullName>
        <formula>Publication__r.FPR_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FPRDueDateFF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FPR_Cycle__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FPR_Cycle</label>
        <referenceTo>FPR_Cycle__c</referenceTo>
        <relationshipName>PubReviewTeams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasVoted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>boolean set when a team member has voted</description>
        <label>HasVoted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCurrentFPRCycleForPub__c</fullName>
        <formula>Publication__r.Current_FPRCycle_Id_Formula__c  =  FPR_Cycle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsCurrentFPRCycleForPub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsLogicallyDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsLogicallyDeleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProxyMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>if user has a proxy for this pub, lookup to that proxy team member</description>
        <label>Proxy Member</label>
        <referenceTo>PubReviewTeam__c</referenceTo>
        <relationshipLabel>Publication Review Team Members (Proxy Member)</relationshipLabel>
        <relationshipName>ProxyMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PubIDLink__c</fullName>
        <formula>HYPERLINK($Setup.OrgUrl__c.VfURL__c&amp;&quot;AppearFpr?Id=&quot;&amp;Publication__r.Id&amp;&quot;&amp;param=blah&quot;, 
Publication__r.Name,  &quot;Review Pub&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PubIDLink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PubReviewTeams</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Returned__c</fullName>
        <label>Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reviewer_Role__c</fullName>
        <label>Reviewer Role</label>
        <picklist>
            <picklistValues>
                <fullName>Area VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDL/GDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biostatistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBL International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global TA Head</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biosimilars</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer_Status__c</fullName>
        <label>Vote</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed With Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discussion Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withheld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Comments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vote Not Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PubReviewTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Optional - indicate if this Pub Review Team Member came from a review team</description>
        <label>SubGroup</label>
        <referenceTo>SubGroup__c</referenceTo>
        <relationshipName>PubReviewTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <label>SubType</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Delegate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegate Exists</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delegate New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Triagee</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriageDelegatedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TriageDelegatedBy</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>PubReviewTeams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Triage_Justification__c</fullName>
        <label>Triage Justification</label>
        <picklist>
            <picklistValues>
                <fullName>Additional legal expertise required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional scientific/medical/statistical expertise required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TriagedTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Publication Review Team Member the publication was triaged to</description>
        <label>Triaged To</label>
        <referenceTo>PubReviewTeam__c</referenceTo>
        <relationshipLabel>Publication Review Team Members</relationshipLabel>
        <relationshipName>Publication_Review_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Primary / Informed</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Notes__c</fullName>
        <label>Work Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isFromDataSourceSubGroup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFromDataSourceSubGroup</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Review Team Member</label>
    <listViews>
        <fullName>PRT_Update</fullName>
        <columns>NAME</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <columns>DisplayName__c</columns>
        <columns>Reviewer__c</columns>
        <columns>Publication__c</columns>
        <columns>FPR_Cycle__c</columns>
        <columns>Reviewer_Status__c</columns>
        <columns>Type__c</columns>
        <columns>ProxyMember__c</columns>
        <columns>Delivered__c</columns>
        <columns>Returned__c</columns>
        <columns>HasVoted__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsCurrentFPRCycleForPub__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsLogicallyDeleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Publication Reviewer Team Member Update</label>
    </listViews>
    <listViews>
        <fullName>Publication_Reviewer_Team_Member_Update</fullName>
        <columns>NAME</columns>
        <columns>IsLogicallyDeleted__c</columns>
        <columns>Reviewer__c</columns>
        <columns>Publication__c</columns>
        <columns>FPR_Cycle__c</columns>
        <columns>Reviewer_Status__c</columns>
        <columns>Type__c</columns>
        <columns>Delivered__c</columns>
        <columns>Returned__c</columns>
        <columns>TriagedTo__c</columns>
        <columns>Triage_Justification__c</columns>
        <columns>DelegatedTo__c</columns>
        <columns>HasVoted__c</columns>
        <columns>ProxyMember__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsLogicallyDeleted__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>IsCurrentFPRCycleForPub__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Publication Reviewer Team Member Update</label>
    </listViews>
    <nameField>
        <displayFormat>PRT-{000000000}</displayFormat>
        <label>PubReviewTeamId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publication Review Team Members</pluralLabel>
    <recordTypes>
        <fullName>AppearPubReviewTeamMemberRecord</fullName>
        <active>true</active>
        <label>AppearPubReviewTeamMemberRecord</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegacyPubReviewTeamMemberRecord</fullName>
        <active>true</active>
        <description>Default for Data Migration</description>
        <label>LegacyPubReviewTeamMemberRecord</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>